feat: show and optimize local download progress
